--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "venv/bin/python3"
+  "python.pythonPath": "/Users/gkutiel/.local/share/virtualenvs/piqok-fZscdBA9/bin/python"
 }
