--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "/Users/gkutiel/.local/share/virtualenvs/piqok-fZscdBA9/bin/python"
+  "python.pythonPath": "/home/gilad/.local/share/virtualenvs/piqok-an0IvuB0/bin/python"
 }
