--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "/home/gilad/.local/share/virtualenvs/piqok-an0IvuB0/bin/python"
+  "python.pythonPath": "/Users/gkutiel/.local/share/virtualenvs/piqok-fZscdBA9/bin/python",
+  "python.linting.pylintEnabled": false,
+  "python.linting.mypyEnabled": true,
+  "python.linting.enabled": true
 }
